# cata-ci

./: AGENTS.md  Cargo.toml  FACILITATOR_GUIDE.md  README.md
exercises/step-00/: Cargo.toml
exercises/step-00/src/: model.rs  profile.rs
exercises/step-00/tests/: rust_basics.rs
exercises/step-01/: Cargo.toml
exercises/step-01/src/: cli.rs  main.rs
exercises/step-01/tests/: cli_help.rs
exercises/step-02/: Cargo.toml
exercises/step-02/src/: cli.rs  command.rs
exercises/step-03/: Cargo.toml
exercises/step-03/src/: cli.rs  command.rs  plan.rs  planner.rs
exercises/step-04/: Cargo.toml
exercises/step-04/src/: cli.rs  main.rs  plan.rs  planner.rs  runner.rs
exercises/step-05/: Cargo.toml
exercises/step-05/src/: cli.rs  config.rs  describe.rs  planner.rs  runner.rs
exercises/step-05/tests/: integration_cli.rs
labs/: 00-rust-basics.md  01-cli-basics.md  02-command-model.md  03-plan-and-steps.md  04-runner-and-dry-run.md  05-describe-config-and-tests.md
slides/: 00-rust-basics.md  01-cli-basics.md  02-command-model.md  03-plan-and-steps.md  04-runner-and-dry-run.md  05-describe-config-and-tests.md
solutions/step-00/: Cargo.toml
solutions/step-00/src/: lib.rs  profile.rs
solutions/step-00/tests/: rust_basics.rs
solutions/step-01/: Cargo.toml
solutions/step-02/: Cargo.toml
solutions/step-03/: Cargo.toml
solutions/step-04/: Cargo.toml
solutions/step-05/: Cargo.toml  kata-ci.toml
solutions/step-05/src/: config.rs  describe.rs  executor.rs  main.rs  plan.rs  planner.rs  runner.rs
solutions/step-05/tests/: integration_cli.rs
(+12 files in other folders)
