[workspace]
members = [
    "exercises/step-00",
    "exercises/step-01",
    "exercises/step-02",
    "exercises/step-03",
    "exercises/step-04",
    "exercises/step-05",
    "solutions/step-00",
    "solutions/step-01",
    "solutions/step-02",
    "solutions/step-03",
    "solutions/step-04",
    "solutions/step-05",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.76"

[workspace.dependencies]
assert_cmd = "2.0.16"
clap = { version = "4.5.38", features = ["derive"] }
predicates = "3.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.23"
